# NANTEN2-data-analysis

./: README.md
Hot_monitor/: Hot monitor otf movie.ipynb  Untitled.ipynb
NANTEN2-data-analysis/: pyproject.toml
NANTEN2-data-analysis/nanten2_data_analysis/OTF/: SPLIT_TASK-2.ipynb  timestamp_check-Copy1.ipynb
NANTEN2-data-analysis/nanten2_data_analysis/planet/: Jupiter_2_1_ncw_No5.ipynb  Jupiter_No1.ipynb  Jupiter_No7.ipynb  Jupiter_beam_pattern_No6.ipynb
NANTEN2-data-analysis/tests/: test_nanten2_data_analysis.py
OTF/: SPLIT_TASK.ipynb  chopper_wheel_baseline_fitting.ipynb
planet/: Jupiter_2_1_No4.ipynb  Jupiter_ncw_No3.ipynb  Jupiter_true_No2.ipynb
