[tool.poetry]
name = "NANTEN2-data-analysis"
version = "0.1.0"
description = ""
authors = ["r-yamada1998 <yamada@a.phys.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
APLpy = "^2.0.3"
pandas = "^1.1.3"
xarray = "^0.16.1"
necstdb = "^0.2.3"
joblib = "^0.17.0"
pathlib = "^1.0.1"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
